finish authentication design UI

--- a/src/app/features/auth/components/forgot-password/forgot-password.html
+++ b/src/app/features/auth/components/forgot-password/forgot-password.html
@@ -1,1 +1,78 @@
-<p>forgot-password works!</p>
+<section>
+  @if (step == 1) {
+      <form [formGroup]="verifyEmail" class=" rounded-4 shadow p-3" (ngSubmit)="verifyEmailSubmit()">
+
+        <div class="my-2">
+          <h1 class="my-2"> Forgot Password</h1>
+        <p class="text-secondary"> Don’t worry, we will help you recover your account.Email</p>
+        </div>
+
+        <div class="my-2">
+            <label for="email">email</label>
+            <input  formControlName="email" id="email" type="email" class="form-control">
+        </div>
+        <button [disabled]="verifyEmail.invalid" type="submit"   class=" btn btn-primary text-center w-100 my-3">continue
+          <i class="fa-solid fa-right-to-bracket"></i>
+        </button>
+       <div class="my-3 text-center">
+         <p class="text-secondary ">Don,t have an account?
+            <a class="text-decoration-none" routerLink="/register">create yours</a>
+        </p>
+       </div>
+    </form>
+  }@else if (step == 2) {
+    <form [formGroup]="verifyCode" class="bg-main-light rounded-4 shadow p-3" (ngSubmit)="verifyCodeSubmit()">
+
+      <span><i class="fa-solid fa-arrow-left"></i></span>
+
+      <div class="my-2">
+          <h1 class="my-2"> Verify OTP</h1>
+        <p class="text-secondary"> Please enter the 6-digits code we have sent to:user@example.com. EditEmail</p>
+        </div>
+
+        <div class="my-2">
+            <label for="resetCode">resetCode</label>
+            <input formControlName="resetCode" id="resetCode" type="text" class="form-control">
+            <p class="text-secondary text-center">You can request another code in: 60s Verify Code</p>
+        </div>
+        <button  [disabled]="verifyCode.invalid" type="submit" class="btn btn-primary text-center w-100">verify Code</button>
+        <div class="my-3 text-center">
+         <p class="text-secondary ">Don,t have an account?
+            <a class="text-decoration-none" routerLink="/register">create yours</a>
+        </p>
+       </div>
+    </form>
+  }@else if (step == 3) {
+    <form [formGroup]="resetPassword" class="bg-main-light rounded-4 shadow p-3" (ngSubmit)="resetPasswordSubmit()">
+
+       <div class="my-2">
+          <h1 class="my-2"> Create a New Password</h1>
+        <p class="text-secondary"> Create a new strong password for your account.</p>
+        </div>
+
+         <div class="my-2">
+            <label for="email">email</label>
+            <input readonly  formControlName="email" id="email" type="email" class="form-control">
+        </div>
+
+         <div class="my-2">
+            <label for="newPassword">new Password</label>
+            <input  formControlName="newPassword" id="newPassword" type="password" class="form-control">
+        </div>
+
+
+
+        <button type="submit" [disabled]="resetPassword.invalid" class="btn btn-primary text-center w-100">reset password</button>
+        <div class="my-3 text-center">
+         <p class="text-secondary ">Don,t have an account?
+            <a class="text-decoration-none" routerLink="/register">create yours</a>
+        </p>
+       </div>
+    </form>
+  }
+
+
+</section>
+
+
+
