--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,40 +1,3 @@
-<div class="container-md mt-4">
-  <div class="row justify-content-between align-items-center w-100 ">
-    <div class="col-5  p-4 rounded">
-      <h3 class="text-primary "><i class="fa-solid fa-pen-to-square text-primary  me-2"></i> EXAM APP</h3>
-      <h2 class="mt-5">Empower your learing journey with our smart exam platform.</h2>
-      <div>
-        <div class="d-flex flex-column justify-content-around mt-5">
-          <h5 class="text-primary"><i class="fa-solid fa-brain"></i>
-             Tailored Diplomas</h5>
-             <p class="text-secondary">Choose from specialized tracks like Frontend, Backend, and Mobile Development.</p>
-        </div>
-
-        <div class="d-flex flex-column justify-content-around mt-5">
-          <h5 class="text-primary">  <i class="fa-solid fa-book-open"></i>
-             Tailored Diplomas</h5>
-             <p class="text-secondary">Choose from specialized tracks like Frontend, Backend, and Mobile Development.</p>
-        </div>
-
-        <div class="d-flex flex-column justify-content-around mt-5">
-          <h5 class="text-primary"><i class="fa-solid fa-file-signature  text-primary"></i>
-             Smart Multi-Step Forms</h5>
-             <p class="text-secondary">Choose from specialized tracks like Frontend, Backend, and Mobile Development.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-5  p-3 rounded">
-      <router-outlet></router-outlet>
-    </div>
-  </div>
+<div class="container">
+  <router-outlet></router-outlet>
 </div>
-
-<!--
-Exam App
-Empower your learning journey with our smart exam platform.
-Tailored Diplomas
-Choose from specialized tracks like Frontend, Backend, and Mobile Development.
-Focused Exams
-Access topic-specific tests including HTML, CSS, JavaScript, and more.
-Smart Multi-Step Forms
-Choose from specialized tracks like Frontend, Backend, and Mobile Development. -->
