--- a/src/app/features/auth/components/register/register.html
+++ b/src/app/features/auth/components/register/register.html
@@ -1,7 +1,7 @@
 <section class=" shadow p-2 my-2 rounded-4">
   <h2 class="my-3">Create Account</h2>
 
-  <form [formGroup]="registerForm" >
+  <form [formGroup]="registerForm"  (ngSubmit)="registerSubmit()">
 
         <div class="d-flex justify-content-between align-items-center">
           <div class="my-2">
@@ -115,6 +115,7 @@
         <button type="submit" class="btn btn-primary w-100 my-3">Create Account</button>
         <p class="text-secondary text-center">Already have an account?
           <a class="text-decoration-none" routerLink="/login" >login</a>
+
         </p>
 
 
